# azure-ai-poc

./: .gitignore  README.md  deploy.sh  docker-compose.yml
.github/: copilot-instructions.md
api/: .dockerignore  Dockerfile  pyproject.toml  run_integration_tests.py  test_all_integration.py  test_migration.py  verify_wrapper_integration.py  verify_wrapper_simple.py
api-ms-agent/: README.md  main.py  pyproject.toml  start-server.sh  sync-azure-keys.sh
api-ms-agent/app/: __init__.py  config.py  devui.py  http_client.py  logger.py  main.py
api-ms-agent/app/auth/: dependencies.py  errors.py  models.py  role_mapping.py  service.py
api-ms-agent/app/core/cache/: __init__.py  cache.py  keys.py  logging.py  memory_backend.py  noop_backend.py  provider.py  singleflight.py  stats.py  types.py
api-ms-agent/app/middleware/: access_log_middleware.py  auth_middleware.py  performance_middleware.py  security_middleware.py
api-ms-agent/app/observability/: auth_metrics.py
api-ms-agent/app/routers/: __init__.py  chat.py  documents.py  metrics.py  models.py  orchestrator.py  research.py  speech.py  workflow_research.py
api-ms-agent/app/services/: __init__.py  agent_run_compat.py  azure_openai_chat_service.py  azure_search_service.py  chat_agent.py  cosmos_db_service.py  document_intelligence_service.py  embedding_service.py  openai_clients.py  orchestrator_agent.py  prompt_builder.py  research_agent.py  session_utils.py  speech_service.py  web_search_service.py  workflow_research_agent.py
api-ms-agent/app/services/mcp/: __init__.py  base.py  geocoder_mcp.py  orgbook_mcp.py  parks_mcp.py
api-ms-agent/app/utils/: __init__.py  source_utils.py  text_utils.py
api-ms-agent/scripts/: __init__.py  compare_baseline.py  run_workload.py
api-ms-agent/tests/: conftest.py  test_agent_run_compat.py  test_auth_coexistence.py  test_auth_entra_token_validation.py  test_auth_keycloak_token_validation.py  test_auth_metrics_endpoint.py  test_auth_module.py  test_cache_backend.py  test_cache_concurrency.py  test_cache_keys.py  test_cache_singleflight.py  test_chat.py  test_coexistence.py  test_compare_baseline.py  test_cosmos_db.py  test_cosmos_db_cache.py  test_documents.py  test_http_cache.py  test_http_negative_cache.py  test_llm_response_cache.py  test_mcp.py  test_orchestrator_api.py  test_orchestrator_reasoning.py  test_performance_middleware.py  test_prompt_builder_cache.py  test_protected_endpoint_entra.py  test_research.py  test_workflow_research.py  test_workload_smoke.py
api/app/: __init__.py  main.py
api/app/auth/: dependencies.py  models.py  service.py
api/app/core/: agent_lightning_config.py  agent_lightning_factory.py  agent_lightning_metrics.py  agent_lightning_observability.py  agent_lightning_security.py  batch.py  cache.py  config.py  logger.py  optimization_roi_calculator.py  performance.py  selective_optimization_config.py  telemetry.py
api/app/middleware/: agent_lightning_error_handler.py  compression_middleware.py  logging_middleware.py  metrics_middleware.py  rate_limit_middleware.py
api/app/models/: __init__.py  optimization_models.py  tenant_models.py
api/app/routers/: __init__.py  agent_lightning_analytics.py  agent_lightning_multi_agent.py  agent_lightning_observability.py  agent_metrics.py  app.py  chat.py  document.py  health.py  mcp.py  metrics.py  tenants.py
api/app/routers/models/: memory_models.py
api/app/services/: advanced_agent_service.py  agent_wrapper_service.py  azure_openai_service.py  azure_search_service.py  cosmos_db_service.py  document_qa_streaming.py  document_qa_workflow.py  document_service.py  health_service.py  langchain_service.py  langgraph_agent_service.py  mcp_client.py  mcp_server.py  mcp_tools.py  memory_service.py  multi_agent_optimization_coordinator.py  multi_tenant_service.py  optimization_analytics_service.py  optimization_service.py  optimized_embedding_service.py  prompt_optimization_strategy.py  rl_optimization_strategy.py  search_index_service.py  sft_optimization_strategy.py  tenant_context.py  workflow_observability.py
api/tests/: conftest.py  test_auth_dependencies.py  test_master_container.py  test_models.py  test_tenant_api.py  test_tenant_context.py
api/tests/contract/: test_document_qa_api_contract.py  test_optimization_endpoints.py
api/tests/integration/: conftest.py  test_agent_lightning_error_handler.py  test_agent_lightning_observability.py  test_agent_lightning_security.py  test_agent_wrapper_integration.py  test_azure_services_resilience.py  test_capabilities.py  test_chat_sessions.py  test_document_endpoints.py  test_end_to_end_workflow.py  test_failover_resilience.py  test_health_endpoints.py  test_langgraph_agent.py  test_load_testing.py  test_multi_agent_coordination_preserved.py  test_multi_agent_optimization.py  test_multi_tenant_isolation.py  test_observability_integration.py  test_observability_traces.py  test_optimization_analytics_service.py  test_optimization_improvement_tracking.py  test_optimized_embeddings_integration.py  test_performance_optimization.py  test_prometheus_metrics.py  test_roi_metrics_calculation.py  test_tenant_endpoints.py
api/tests/unit/: test_agent_lightning_config.py  test_agent_lightning_factory.py  test_agent_wrapper_service.py  test_cache.py  test_compression_middleware.py  test_cosmos_db_service.py  test_document_router.py  test_logger.py  test_main.py  test_multi_agent_optimization_coordinator.py  test_multi_tenant_service.py  test_optimization_models.py  test_optimization_roi_calculator.py  test_optimization_service.py  test_optimization_service_strategy.py  test_optimized_embedding_service.py  test_prompt_optimization_strategy.py  test_rl_optimization_strategy.py  test_selective_agent_optimization.py  test_sft_optimization_strategy.py  test_telemetry.py  test_tenant_router.py
backend/: Dockerfile  package-lock.json  package.json
docs/: ARCHITECTURE_DEMO.md  ARCHITECTURE_DEMO_NOTES.md  ENTRA_ID_TROUBLESHOOTING.md
frontend/: Caddyfile  ENTRA_ID_SETUP.md  index.html  package-lock.json  (+3 more)
(+237 files in other folders)
